# mcSparse

./: .clang-format  CMakeLists.txt  LICENSE.md  Makefile  README.md  mcSparse_open_source_v2.24.0_release_notes.txt
mcsparse/: CMakeLists.txt
mcsparse/include/: mcsparse.h
mcsparse/include/common/: mcsp_types.h.in
mcsparse/include/common/internal/: mcsp_bfloat16.hpp  mcsp_complex.hpp  mcsp_datatype.h  mcsp_half.hpp
mcsparse/include/interface/: mcsp_conversion.h  mcsp_extra.h  mcsp_generic.h  mcsp_helper.h.in  mcsp_level1.h  mcsp_level2.h  mcsp_level3.h  mcsp_precond.h  mcsp_reorder.h
mcsparse/include/interface/tbd/: mcsp_tbd_conversion.h  mcsp_tbd_generic.h  mcsp_tbd_level2.h
mcsparse/include/utils/: mcsp_logger.h
mcsparse/src/common/: mcsp_dense_transpose_device.hpp  mcsp_handle.cpp  mcsp_hashtable_device.hpp  mcsp_helper.cpp  mcsp_internal_transpose_dense.hpp  mcsp_internal_transpose_sparse.hpp
mcsparse/src/include/: mcsp_config.h  mcsp_debug.h  mcsp_general_utility.h  mcsp_handle.h  mcsp_internal_device_kernels.hpp  mcsp_internal_host_utils.hpp  mcsp_internal_interface.h  mcsp_internal_types.h  mcsp_runtime_wrapper.h
mcsparse/src/include/internal_interface/: mcsp_internal_conversion.h  mcsp_internal_extra.h  mcsp_internal_generic.h  mcsp_internal_helper.h  mcsp_internal_level1.h  mcsp_internal_level2.h  mcsp_internal_level3.h  mcsp_internal_precond.h  mcsp_internal_reorder.h
mcsparse/src/kernels/conversion/: coo2csr_device.hpp  coo2dense_device.hpp  create_identity_device.hpp  csr2csc_device.hpp  csr2csr_compress_device.hpp  csr2ell_device.hpp  csr2gebsr_device.hpp  dense2csx_device.hpp  gebsr2gebsc_device.hpp  mcsp_coo2csr.cpp  mcsp_coo2dense.cpp  mcsp_coosort.cpp  mcsp_create_identity.cpp  mcsp_csc2dense.cpp  mcsp_cscsort.cpp  mcsp_csr2csc.cpp  mcsp_csr2csr_compress.cpp  mcsp_csr2csru.cpp  mcsp_csr2dense.cpp  mcsp_csr2ell.cpp  mcsp_csr2gebsr.cpp  mcsp_csrsort.cpp  mcsp_csru2csr.cpp  mcsp_dense2coo.cpp  mcsp_dense2csx.cpp  mcsp_gebsr2gebsc.cpp  mcsp_nnz.cpp  mcsp_nnz_compress.cpp  mcsp_prune_csr2csr.cpp  mcsp_prune_csr2csr_by_percentage.cpp  mcsp_prune_dense2csr.cpp  mcsp_prune_dense2csr_by_percentage.cpp  nnz_compress_device.hpp  nnz_device.hpp  prune_csr2csr_by_percentage_device.hpp  prune_dense2csr_by_percentage_device.hpp
mcsparse/src/kernels/generic/: axpby_device.hpp  mcsp_axpby.cpp  mcsp_generic.cpp  mcsp_sddmm_gpu.cpp  mcsp_spvv.cpp  sddmm_device.hpp
mcsparse/src/kernels/level1/: axpyi_device.hpp  dotci_device.hpp  doti_device.hpp  gthr_device.hpp  gthrz_device.hpp  mcsp_axpyi.cpp  mcsp_dotci.cpp  mcsp_doti.cpp  mcsp_gthr.cpp  mcsp_gthrz.cpp  mcsp_roti.cpp  mcsp_sctr.cpp  roti_device.hpp  sctr_device.hpp
mcsparse/src/mcprim/: block_radix_sort.hpp  block_reduce.hpp  block_scan.hpp  block_segmented_scan.hpp  device_radix_sort.hpp  device_reduce.hpp  device_scan.hpp  device_segmented_scan.hpp  prim_types.h
mcsparse/src/tbd/: mcsp_tbd_conversion.cpp  mcsp_tbd_generic.cpp  mcsp_tbd_level2.cpp
mcsparse/src/utils/: mcsp_logger.cpp  mcsp_mcsparse_logger.cpp
mcsparse/src/wrapper/: mcsp_interface_wrapper.cpp
(+58 files in other folders)
